# python-experiments

./: .gitignore
blessed-experiments/: algebraist.txt  environment.yml  main.py
msglist/: CLAUDE.md  chat_ui.py  chat_ui_list.py  msgs.py  msgs_try.py  ws_client.py  ws_server.py
n-clients/: .gitignore  dodo.py  environment.yml  run_client.sh  run_server.sh
n-clients/src/n-clients/client/: main.py
n-clients/src/n-clients/server/: main.py
not-echo/: .gitignore  dodo.py  environment.yml  run_client.sh  run_server.sh
not-echo/src/not-echo/client/: main.py
not-echo/src/not-echo/server/: main.py
wscat/proto/: simple_math.proto
wscat/python/: .gitignore  README.md  dodo.py  environment.yml  pyproject.toml
wscat/python/src/wscat/client/: add.py  game.py
wscat/python/src/wscat/server/: main.py
wscat/python/tools/: build_protos.py
wscat/rust/: Cargo.toml  build.rs
wscat/rust/src/: lib.rs
wscat/rust/src/client/: add.rs  game.rs
wscat/rust/src/server/: main.rs
