[package]
name = "wscat-rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/server/main.rs"

[[bin]]
name = "wscat-add"
path = "src/client/add.rs"

[[bin]]
name = "wscat-game"
path = "src/client/game.rs"

[dependencies]
tokio = { version = "1.47", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
tokio-tungstenite = "0.27"
prost = "0.14"
rand = "0.9"
futures-util = "0.3"
reqwest = "0.12"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }

[build-dependencies]
prost-build = "0.14"
